--- a/index.html
+++ b/index.html
@@ -1,26 +1,328 @@
 <!DOCTYPE html>
 <html lang="fa">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نقشه ایران با موقعیت مکانی کاربر</title>
+    <title>افزودن محصول</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
-        body, html { margin: 0; padding: 0; width: 100%; height: 100%; }
-        #map { width: 100%; height: 100vh; }
+        @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
+
+        body {
+            font-family: 'Vazirmatn', sans-serif;
+            background: #f9f9f9;
+            margin: 0;
+            padding: 40px;
+            direction: rtl;
+            text-align: center;
+        }
+
+        h2 {
+            font-family: 'Vazirmatn', sans-serif;
+            color: #333;
+            font-size: 26px;
+            margin-bottom: 30px;
+            transition: 0.3s ease-in-out;
+        }
+
+        .form-group {
+            margin-bottom: 25px;
+        }
+
+        .form-group input,
+        .form-group textarea,
+        .form-group select {
+            font-family: 'Vazirmatn', sans-serif;
+            width: 100%;
+            padding: 12px;
+            background: transparent;
+            font-size: 16px;
+            outline: none;
+            border: none;
+            border-bottom: 2px solid #ddd;
+            color: #444;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus,
+        .form-group select:focus {
+            font-family: 'Vazirmatn', sans-serif;
+            border-bottom: 2px solid #007bff;
+            color: #333;
+            box-shadow: 0 0 5px rgba(0, 123, 255, 0.4);
+        }
+
+        .form-group input::placeholder,
+        .form-group textarea::placeholder {
+            font-family: 'Vazirmatn', sans-serif;
+            color: #888;
+        }
+
+        .image-upload-container {
+            font-family: 'Vazirmatn', sans-serif;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        .image-upload-label {
+            font-family: 'Vazirmatn', sans-serif;
+            font-size: 14px;
+            color: #666;
+            margin-bottom: 8px;
+            display: block;
+        }
+
+        .image-upload {
+            font-family: 'Vazirmatn', sans-serif;
+            width: 160px;
+            height: 160px;
+            border: 2px dashed #bbb;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            cursor: pointer;
+            transition: border-color 0.3s, transform 0.2s ease-in-out;
+            margin: auto;
+            border-radius: 8px;
+        }
+
+        .image-upload:hover {
+            border-color: #333;
+            transform: scale(1.05);
+        }
+
+        .image-upload img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 8px;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .image-upload img.show {
+            opacity: 1;
+        }
+
+        .image-upload .plus {
+            font-size: 40px;
+            color: #bbb;
+            position: absolute;
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .image-upload input {
+            display: none;
+        }
+
+        .image-count {
+            font-size: 14px;
+            color: #555;
+            margin-top: 8px;
+            opacity: 0;
+            transform: translateY(5px);
+            transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+        }
+
+        .image-count.show {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .btn-submit {
+            font-family: 'Vazirmatn', sans-serif;
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 12px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
+            border-radius: 8px;
+            width: 100%;
+            max-width: 300px;
+            display: block;
+            margin: 20px auto;
+        }.btn-submit:disabled {
+            background: #cccccc;
+            cursor: not-allowed;
+        }
+
+        .btn-submit:hover:not(:disabled) {
+            background: #0056b3;
+            transform: scale(1.05);
+        }
+
+        @media (max-width: 768px) {
+            h2 {
+                font-size: 22px;
+            }
+
+            .form-group input,
+            .form-group textarea,
+            .form-group select {
+                font-size: 14px;
+            }
+
+            .image-upload {
+                width: 130px;
+                height: 130px;
+            }
+
+            .btn-submit {
+                font-size: 16px;
+                padding: 10px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            body {
+                padding: 20px;
+            }
+
+            .form-group input,
+            .form-group textarea,
+            .form-group select {
+                font-size: 13px;
+                padding: 10px;
+            }
+
+            .image-upload {
+                width: 100px;
+                height: 100px;
+            }
+
+            .btn-submit {
+                font-size: 14px;
+                padding: 8px;
+            }
+        }
+
+        .selected-colors {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        .color-circle {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            display: inline-block;
+            border: 2px solid #fff;
+            box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+        }
+
+        #map {
+            height: 300px;
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto 30px auto;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .terms-container {
+            margin: 20px auto;
+            text-align: center;
+        }
+
+        .terms-container a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        .terms-container a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
+
 <body>
     <div id="map"></div>
 
+    <h2>افزودن محصول جدید</h2>
+    <form id="productForm">
+        <div class="form-group">
+            <input type="text" id="title" placeholder="عنوان محصول" required>
+        </div>
+
+        <div class="form-group">
+            <textarea id="description" placeholder="توضیحات محصول" required></textarea>
+        </div>
+
+        <div class="form-group">
+            <input type="number" id="price" placeholder="قیمت (تومان)" required>
+        </div>
+        <div class="form-group">
+            <input type="number" id="stock" placeholder="موجودی انبار" required>
+        </div>
+
+        <div class="form-group">
+            <select id="category" required>
+                <option value="" disabled selected>انتخاب دسته‌بندی</option>
+                <option value="electronics">الکترونیکی</option>
+                <option value="clothing">لباس</option>
+                <option value="home_appliances">لوازم خانگی</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="colors">انتخاب رنگ‌ها</label>
+            <div id="colors">
+                <input type="color" class="color-picker">
+            </div>
+            <div id="selectedColors" class="selected-colors"></div>
+        </div>
+
+        <div class="form-group">
+            <select id="size" required>
+                <option value="" disabled selected>انتخاب سایز</option>
+                <option value="small">کوچک</option>
+                <option value="medium">متوسط</option>
+                <option value="large">بزرگ</option>
+                <option value="extra_large">بسیار بزرگ</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <input type="text" id="material" placeholder="جنس محصول (مثلاً پلاستیک)" required>
+        </div>
+
+        <div class="image-upload-container"><label class="image-upload-label">انتخاب تصاویر (حداکثر 10 تصویر)</label>
+            <label class="image-upload">
+                <input type="file" id="fileInput" multiple accept="image/*">
+                <span class="plus">+</span>
+                <img id="previewImage">
+            </label>
+            <div id="imageCount" class="image-count">۰ تصویر انتخاب شده</div>
+        </div>
+
+        <div class="terms-container">
+            <input type="checkbox" id="terms" name="terms">
+            <label for="terms">من <a href="YOUR_TERMS_LINK" target="_blank">قوانین و مقررات</a> را می‌پذیرم</label>
+        </div>
+
+        <button type="submit" class="btn-submit" id="submitBtn" disabled>افزودن محصول</button>
+    </form>
+
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
+        // متغیر برای بررسی وضعیت موقعیت مکانی
+        let locationConfirmed = false;
+
         // ایجاد نقشه و تنظیم مرکز روی ایران
         var map = L.map('map').setView([32.4279, 53.6880], 6);
 
         // افزودن لایه نقشه از OpenStreetMap
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+            attribution: '© <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
 
         // تابع برای نمایش موقعیت کاربر
@@ -35,11 +337,18 @@
             L.marker([userLat, userLon]).addTo(map)
                 .bindPopup("موقعیت شما")
                 .openPopup();
+
+            // تأیید موقعیت مکانی
+            locationConfirmed = true;
+            updateSubmitButton();
         }
 
         // در صورت خطا در دریافت موقعیت
         function locationError(error) {
             console.log("خطا در دریافت موقعیت:", error);
+            alert("لطفاً موقعیت مکانی خود را روشن کنید و اجازه دسترسی بدهید.");
+            locationConfirmed = false;
+            updateSubmitButton();
         }
 
         // دریافت موقعیت مکانی کاربر
@@ -47,7 +356,70 @@
             navigator.geolocation.getCurrentPosition(showLocation, locationError);
         } else {
             alert("موقعیت مکانی در مرورگر شما پشتیبانی نمی‌شود.");
+            locationConfirmed = false;
+            updateSubmitButton();
         }
+
+        // تابع برای فعال/غیرفعال کردن دکمه تأیید
+        function updateSubmitButton() {
+            const termsCheckbox = document.getElementById('terms');
+            const submitBtn = document.getElementById('submitBtn');
+            submitBtn.disabled = !(locationConfirmed && termsCheckbox.checked);
+        }
+
+        // اسکریپت برای انتخاب رنگ
+        const colorPicker = document.querySelector('.color-picker');
+        const selectedColorsContainer = document.getElementById('selectedColors');
+
+        colorPicker.addEventListener('change', function () {
+            const colorValue = colorPicker.value;
+            const colorCircle = document.createElement('div');
+            colorCircle.classList.add('color-circle');
+            colorCircle.style.backgroundColor = colorValue;
+            selectedColorsContainer.appendChild(colorCircle);
+        });
+
+        // اسکریپت برای آپلود تصویر با محدودیت 10 عکس
+        document.getElementById('fileInput').addEventListener('change', function (event) {
+            const files = event.target.files;
+            const previewImage = document.getElementById('previewImage');
+            const imageCount = document.getElementById('imageCount');
+            const plusIcon = document.querySelector('.plus');
+
+            if (files.length > 10) {
+                alert("شما نمی‌توانید بیشتر از 10 تصویر آپلود کنید!");
+                this.value = ''; // ریست کردن ورودی فایل
+                previewImage.classList.remove("show");
+                plusIcon.style.opacity = "1";
+                imageCount.textContent = "۰ تصویر انتخاب شده";
+                imageCount.classList.remove("show");
+                return;
+            }
+
+            if (files.length > 0) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    previewImage.src = e.target.result;
+                    previewImage.classList.add("show");
+                    plusIcon.style.opacity = "0";
+                };
+                reader.readAsDataURL(files[0]);
+
+                imageCount.textContent = '${files.length} تصویر انتخاب شده';
+                imageCount.classList.add("show");
+            } else {
+                previewImage.classList.remove("show");
+                plusIcon.style.opacity = "1";
+                imageCount.textContent = "۰ تصویر انتخاب شده";
+                imageCount.classList.remove("show");
+            }
+        });
+
+        // بررسی وضعیت چک‌باکس قوانین
+        document.getElementById('terms').addEventListener('change', function () {
+            updateSubmitButton();
+        });
     </script>
 </body>
+
 </html>
