--- a/index.html
+++ b/index.html
@@ -1,391 +1,106 @@
 <!DOCTYPE html>
 <html lang="fa">
-
 <head>
-    <!-- تنظیمات اولیه صفحه -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>درگاه پرداخت</title>
+    <title>سایت من</title>
 
-    <!-- وارد کردن فونت‌ها -->
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="photo_2029.png">
+
+    <!-- Apple Touch Icon برای آیفون -->
+    <link rel="apple-touch-icon" sizes="180x180" href="photo_2029.png">
+
+    <!-- Web App Manifest برای اندروید -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- فعال کردن وب اپ در آیفون -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- استایل -->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
-        /* فونت اصلی صفحه */
-        @import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap');
-        /* فونت عجیب برای کپچا */
-
-        /* استایل کلی بدنه صفحه */
         body {
-            font-family: 'Vazirmatn', sans-serif;
-            background: #f9f9f9;
-            margin: 0;
-            padding: 40px;
-            direction: rtl;
-            /* جهت راست به چپ */
+            font-family: Arial, sans-serif;
             text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
-
-        /* استایل عنوان صفحه */
-        h2 {
-            font-family: 'Vazirmatn', sans-serif;
-            color: #333;
-            font-size: 26px;
-            margin-bottom: 30px;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* استایل کانتینر کارت ساده */
-        .card-container {
-            width: 350px;
-            height: 200px;
-            margin: 0 auto 30px auto;
-            /* وسط‌چین کردن و فاصله از فرم */
-            position: relative;
-        }
-
-        /* استایل کارت ساده و دوست‌داشتنی */
-        .card-front {
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, #c5cdcf, #efeeef);
-            /* گرادیانت ملایم و قشنگ */
-            border-radius: 15px;
-            padding: 10px;
-            color: #333;
-            /* رنگ متن تیره برای خوانایی */
-            font-family: 'Vazirmatn', sans-serif;
-            /* فونت ساده و دوست‌داشتنی */
-            position: relative;
-            box-shadow: 0 4px 15px rgba(235, 227, 227, 0.1);
-            /* سایه نرم */
-            border: 1px solid #ddd;
-            /* خط دور ملایم */
-        }
-
-        /* استایل شماره کارت (وسط کارت) */
-        .card-number {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 16px;
-            letter-spacing: px;
-            /* فاصله بین حروف برای زیبایی */
-        }
-
-        /* استایل تاریخ انقضا (پایین سمت راست) */
-        .card-expiry {
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
-            font-size: 16px;
-        }
-
-        /* استایل CVV (پایین سمت چپ) */
-        .card-cvv {
-            position: absolute;
-            bottom: 20px;
-            left: 20px;
-            font-size: 16px;
-        }
-
-        /* استایل فرم پرداخت */
-        .payment-form {
-            max-width: 400px;
-            margin: 0 auto;
-            /* وسط‌چین کردن فرم */
-        }
-
-        /* استایل گروه فیلدها */
-        .form-group {
-            margin-bottom: 25px;
-        }
-
-        /* استایل ورودی‌ها (فیلدها) */
-        .form-group input {
-            font-family: 'Vazirmatn', sans-serif;
-            width: 100%;
-            padding: 12px;
-            background: transparent;
-            font-size: 16px;
-            outline: none;
-            border: none;
-            border-bottom: 2px solid #ddd;
-            color: #444;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-        }
-
-        /* استایل ورودی‌ها موقع فوکوس */
-        .form-group input:focus {
-            border-bottom: 2px solid #007bff;
-            color: #333;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.4);
-        }
-
-        /* استایل پلِیس‌هولدر */
-        .form-group input::placeholder {
-            color: #888;
-        }
-
-        /* استایل گروه ماه و سال */
-        .expiry-group {
-            display: flex;
-            gap: 35px;
-            /* فاصله بین ماه و سال */
-            max-width: 235px;
-            /* طول کوتاه‌تر */
-            margin: 0 auto;
-            /* وسط‌چین کردن */
-        }
-
-        /* استایل فیلدهای داخل گروه ماه و سال */
-        .expiry-group .form-group {
-            margin-bottom: 25px;
-        }
-
-        /* استایل فیلد ماه */
-        .expiry-group .form-group.month {
-            flex: 1;
-        }
-
-        /* استایل فیلد سال */
-        .expiry-group .form-group.year {
-            flex: 1.3;
-            /* سال یه کم بزرگ‌تر */
-        }
-
-        /* استایل فیلد CVV */
-        .cvv-group {
-            max-width: 300px;
-            /* طول کوتاه‌تر */
-            margin: 0 auto;
-            /* وسط‌چین کردن */
-        }
-
-        /* استایل کپچا */
-        .captcha {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            margin-bottom: 25px;
-        }
-
-        /* استایل متن کپچا */
-        .captcha span {
-            font-family: 'Creepster', cursive;
-            /* فونت عجیب */
-            font-size: 14px;
-            /* کوچیک‌تر */
-            color: #333;
-            margin-left: 10px;
-            /* بیرون کادر */
-        }
-
-        /* استایل فیلد کپچا */
-        .captcha .form-group {
-            flex: 1;
-        }
-
-        /* استایل بخش رمز پویا */
-        .dynamic-password {
-            position: relative;
-        }
-
-        /* استایل لینک رمز پویا */
-        .dynamic-password a {
-            position: absolute;
-            left: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 12px;
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        /* استایل هاور لینک رمز پویا */
-        .dynamic-password a:hover {
-            text-decoration: underline;
-        }
-
-        /* استایل دکمه پرداخت */
-        .btn-submit {
-            font-family: 'Vazirmatn', sans-serif;
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 12px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
-            border-radius: 8px;
-            width: 100%;
-            max-width: 300px;
-            display: block;
+        .logo {
+            width: 150px;
             margin: 20px auto;
         }
-
-        /* استایل هاور دکمه پرداخت */
-        .btn-submit:hover {
-            background: #0056b3;
-            transform: scale(1.05);
+        .container {
+            max-width: 600px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
-
-        /* استایل نمایش مبلغ */
-        .price-display {
-            font-size: 18px;
+        h1 {
             color: #333;
-            margin-bottom: 20px;
         }
-
-        /* استایل تیک ذخیره کارت */
-        .save-card {
-            margin: 20px 0;
-            font-size: 14px;
+        p {
             color: #666;
         }
-
-        /* استایل ریسپانسیو برای تبلت */
-        @media (max-width: 768px) {
-            h2 {
-                font-size: 22px;
-            }
-
-            .form-group input {
-                font-size: 14px;
-            }
-
-            .btn-submit {
-                font-size: 16px;
-                padding: 10px;
-            }
-        }
-
-        /* استایل ریسپانسیو برای موبایل */
-        @media (max-width: 480px) {
-            body {
-                padding: 20px;
-            }
-
-            .form-group input {
-                font-size: 13px;
-                padding: 10px;
-            }
-
-            .btn-submit {
-                font-size: 14px;
-                padding: 8px;
-            }
+        .btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            background: #007aff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
     </style>
 </head>
-
 <body>
-    <!-- شبیه‌سازی کارت بانکی ساده و دوست‌داشتنی -->
-    <div class="card-container">
-        <div class="card-front">
-            <!-- نمایش شماره کارت (وسط کارت) -->
-            <div class="card-number" id="cardNumberDisplay">XXXX-XXXX-XXXX-XXXX</div>
-            <!-- نمایش تاریخ انقضا (پایین سمت راست) -->
-            <div class="card-expiry" id="cardExpiryDisplay">MM/YY</div>
-            <!-- نمایش CVV (پایین سمت چپ) -->
-            <div class="card-cvv" id="cardCvvDisplay">XXXX</div>
-        </div>
+
+    <!-- نمایش لوگو -->
+    <img src="logo.png" alt="لوگوی سایت" class="logo">
+
+    <div class="container">
+        <h1>به سایت من خوش آمدید!</h1>
+        <p>این سایت را به صفحه اصلی گوشی خود اضافه کنید.</p>
+
+        <!-- دکمه دانلود برای اندروید -->
+        <button class="btn" id="install-btn" style="display: none;">دانلود و نصب</button>
     </div>
 
-    <!-- عنوان صفحه -->
-    <h2>پرداخت آنلاین</h2>
-
-    <!-- نمایش مبلغ ثابت -->
-    <div class="price-display">مبلغ قابل پرداخت: <span id="amount">100,000</span> تومان</div>
-
-    <!-- فرم پرداخت -->
-    <form class="payment-form">
-        <!-- فیلد شماره کارت -->
-        <div class="form-group">
-            <input type="text" name="card_number" placeholder="شماره کارت (1234-5678-9012-3456)">
-        </div>
-
-        <!-- فیلد CVV (تا 5 رقم) -->
-        <div class="cvv-group">
-            <div class="form-group">
-                <input type="text" name="cvv" placeholder="کد CVV2 (12345)" maxlength="5">
-            </div>
-        </div>
-
-        <!-- گروه ماه و سال -->
-        <div class="expiry-group">
-            <div class="form-group month">
-                <input type="text" name="expiry_month" placeholder="ماه انقضا" maxlength="2">
-            </div>
-            <div class="form-group year">
-                <input type="text" name="expiry_year" placeholder="سال انقضا " maxlength="4">
-            </div>
-        </div>
-
-        <!-- فیلد رمز اینترنتی -->
-        <h5>رمز اینترنتی</h5>
-        <!-- فیلد رمز پویا با لینک -->
-        <div class="form-group dynamic-password">
-            <input type="text" name="dynamic_password" placeholder="">
-            <a href="#">رمز پویا</a>
-        </div>
-
-        <!-- کپچا -->
-        <div class="captcha">
-            <span id="captchaQuestion"></span>
-            <div class="form-group">
-                <input type="text" name="captcha_answer" placeholder="جواب را وارد کنید">
-            </div>
-        </div>
-
-        <!-- تیک ذخیره کارت -->
-        <div class="save-card">
-            <input type="checkbox" id="save_card" name="save_card">
-            <label for="save_card">ذخیره اطلاعات کارت برای استفاده‌های بعدی</label>
-        </div>
-
-        <!-- دکمه پرداخت -->
-        <button type="submit" class="btn-submit">پرداخت</button>
-    </form>
-
-    <!-- اسکریپت برای کپچا و کارت -->
     <script>
-// تولید دو عدد رندم برای کپچا
-const num1 = Math.floor(Math.random() * 10);
-const num2 = Math.floor(Math.random() * 10);
-document.getElementById('captchaQuestion').textContent = `${num1} + ${num2} = ?`;
+        let deferredPrompt;
+        const installBtn = document.getElementById('install-btn');
 
-// نمایش مبلغ ثابت
-document.getElementById('amount').textContent = '100,000';
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            deferredPrompt = e;
+            installBtn.style.display = 'block';
+        });
 
-// به‌روزرسانی زنده شماره کارت روی کارت
-document.querySelector('input[name="card_number"]').addEventListener('input', function () {
-    const value = this.value.replace(/\D/g, '').slice(0, 16); // فقط اعداد، حداکثر 16 رقم
-    const formatted = value.padEnd(16, 'X').match(/(\d{0,4})(\d{0,4})(\d{0,4})(\d{0,4})/);
-    document.getElementById('cardNumberDisplay').textContent = formatted ? `${formatted[1]}-${formatted[2]}-${formatted[3]}-${formatted[4]}` : 'XXXX-XXXX-XXXX-XXXX';
-});
-
-// به‌روزرسانی زنده ماه انقضا
-document.querySelector('input[name="expiry_month"]').addEventListener('input', function () {
-    const month = this.value.padEnd(2, 'X');
-    const year = document.querySelector('input[name="expiry_year"]').value.padEnd(2, 'X');
-    document.getElementById('cardExpiryDisplay').textContent = `${month}/${year}`;
-});
-
-// به‌روزرسانی زنده سال انقضا
-document.querySelector('input[name="expiry_year"]').addEventListener('input', function () {
-    const month = document.querySelector('input[name="expiry_month"]').value.padEnd(2, 'X');
-    const year = this.value.slice(-2).padEnd(2, 'X');
-    document.getElementById('cardExpiryDisplay').textContent = `${month}/${year}`;
-});
-
-// به‌روزرسانی زنده CVV (تا 5 رقم)
-document.querySelector('input[name="cvv"]').addEventListener('input', function () {
-    const value = this.value.replace(/\D/g, '').slice(0, 5); // فقط اعداد، حداکثر 5 رقم
-    document.getElementById('cardCvvDisplay').textContent = value.padEnd(5, 'X');
-});
+        installBtn.addEventListener('click', () => {
+            deferredPrompt.prompt();
+            deferredPrompt.userChoice.then(choiceResult => {
+                if (choiceResult.outcome === 'accepted') {
+                    console.log('کاربر برنامه را نصب کرد');
+                }
+                deferredPrompt = null;
+                installBtn.style.display = 'none';
+            });
+        });
     </script>
-</body>
 
+    <!-- ثبت Service Worker -->
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js')
+          .then(() => console.log('Service Worker ثبت شد!'))
+          .catch(err => console.log('خطا در ثبت Service Worker', err));
+      }
+    </script>
+
+</body>
 </html>
